# extended-reasoning-benchmark

./: .gitignore  CHECKLIST.md  CONTRIBUTING.md  METHODOLOGY.md  README.md  justfile  main.typ  pyproject.toml
Prompts /: 00_MASTER_INDEX.md  01_project_scaffold.md  02_database_schema.md  03_dataset_pipeline.md  04_api_clients.md  05_execution_engine.md  06_grading_pipeline.md  07_analysis_metrics.md  08_visualizations.md  09_cost_dashboard.md  10_final_report.md
data/processed/: alfworld_plans.json  arc_challenge.json  bbh_analogies.json  bbh_word_sorting.json  cause_effect.json  drop.json  gsm8k.json  hellaswag.json  humaneval.json  logic_grid.json  math_500.json  mbpp.json
results/: decision_tree.md  enterprise_guide.md
results/figures/: captions.md
src/benchmark/: __init__.py  __main__.py  config.py  database.py
src/benchmark/analysis/: __init__.py  __main__.py  metrics.py  visualizations.py
src/benchmark/clients/: __init__.py  base.py  github_models.py  google_studio.py  groq_client.py
src/benchmark/datasets/: __init__.py  __main__.py  loader.py
src/benchmark/engine/: __init__.py  __main__.py  budget.py  runner.py
src/benchmark/grading/: __init__.py  __main__.py  qualitative.py  quantitative.py
src/benchmark/report/: __init__.py  __main__.py  cost_dashboard.py
tests/: conftest.py  test_clients.py  test_cost_dashboard.py  test_database.py  test_datasets.py  test_grading.py  test_metrics.py  test_runner.py  test_visualizations.py
