[project]
name = "llm-reasoning-benchmark"
version = "0.1.0"
description = "Systematic benchmark of test-time compute (extended reasoning) across state-of-the-art LLMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "httpx[http2]>=0.28",
    "polars>=1.20",
    "matplotlib>=3.10",
    "seaborn>=0.13",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.1",
    "tqdm>=4.67",
    "rich>=14.0",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "pyarrow>=24.0.0",
    "pandas>=3.0.2",
]

[project.scripts]
benchmark = "benchmark.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/benchmark"]

# ──────────────────────────────────────────────
# Ruff — linter + formatter
# ──────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
    "ANN", # flake8-annotations
    "D",   # pydocstyle
]
ignore = [
    "D100",    # missing docstring in public module (handled per-file)
    "D104",    # missing docstring in public package
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
    "E501",    # line too long
    "RUF001",  # ambiguous unicode char
    "B905",    # zip without strict=
    "ANN201", "ANN202", "ANN204", "ANN001", "RUF059", "B007", "D103", "D107",
    "D101", "N806", "SIM102", "SIM108", "F401", "D205", "D102", "SIM118"
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "D103"]  # Don't require annotations or docstrings in tests

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ──────────────────────────────────────────────
# Pytest
# ──────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring API keys",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]
